<?xml version="1.0"?>
<package>
  <name>orb_slam</name>
  <version>0.0.0</version>
  <description>ORB_SLAM</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raul@todo.todo">Raul Mur-Artal</maintainer>

  <license>GPLv3</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>roslib</build_depend>
<build_depend>tf</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>image_transport</build_depend>
<build_depend>cv_bridge</build_depend>

</package>


